Minor UI/UX fix on down arrow - animation was overflowing screen

--- a/src/components/DownArrow/styles.css
+++ b/src/components/DownArrow/styles.css
@@ -9,25 +9,24 @@
     animation-duration: 2s;
     animation-iteration-count: infinite;
     cursor: pointer;
-    z-index: 10;
 }
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes down {
-    0%   {top: 87vh;}
-    50%  {top: 93vh;}
-    100% {top: 87vh;}
+    0%   {top: 80vh;}
+    50%  {top: 86vh;}
+    100% {top: 80vh;}
 }
 /* for normal browsers */
 @keyframes down {
-    0%   {top: 87vh;}
-    50%  {top: 93vh;}
-    100% {top: 87vh;}
+    0%   {top: 80vh;}
+    50%  {top: 86vh;}
+    100% {top: 80vh;}
 }
 
 @media only screen and (max-width: 600px) {
     .downArrow {
         justify-self: center;
         align-self: center;
-        width: 8%;
+        width: 10%;
     }
 }
